[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "j_quants_auth"
version = "0.0.1"
description = "J-Quants APIから、IDトークンを取得するクライアント処理"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.urls]
"Homepage" = "https://github.com/Azamino28Ki/J-QuantsApiAutorization"